testdata/baselines/reference/submodule/conformance/parserRegularExpressionDivideAmbiguity6.errors.txt
parserRegularExpressionDivideAmbiguity6.ts(4,5): error TS2322: Type 'number' is not assignable to type 'undefined'.
parserRegularExpressionDivideAmbiguity6.ts(5,5): error TS2322: Type 'number' is not assignable to type 'undefined'.
parserRegularExpressionDivideAmbiguity6.ts(6,5): error TS2322: Type 'number' is not assignable to type 'undefined'.
parserRegularExpressionDivideAmbiguity6.ts(7,5): error TS2322: Type 'number' is not assignable to type 'undefined'.
parserRegularExpressionDivideAmbiguity6.ts(8,5): error TS2322: Type 'number' is not assignable to type 'undefined'.
parserRegularExpressionDivideAmbiguity6.ts(9,5): error TS2322: Type 'number' is not assignable to type 'undefined'.
parserRegularExpressionDivideAmbiguity6.ts(10,5): error TS2322: Type 'number' is not assignable to type 'undefined'.
parserRegularExpressionDivideAmbiguity6.ts(11,5): error TS2322: Type 'number' is not assignable to type 'undefined'.
parserRegularExpressionDivideAmbiguity6.ts(12,5): error TS2322: Type 'number' is not assignable to type 'undefined'.
parserRegularExpressionDivideAmbiguity6.ts(13,5): error TS2322: Type 'number' is not assignable to type 'undefined'.
parserRegularExpressionDivideAmbiguity6.ts(14,5): error TS2322: Type 'number' is not assignable to type 'undefined'.
parserRegularExpressionDivideAmbiguity6.ts(15,5): error TS2322: Type 'number' is not assignable to type 'undefined'.
parserRegularExpressionDivideAmbiguity6.ts(16,5): error TS2322: Type 'number' is not assignable to type 'undefined'.
parserRegularExpressionDivideAmbiguity6.ts(17,5): error TS2322: Type 'number' is not assignable to type 'undefined'.
parserRegularExpressionDivideAmbiguity6.ts(18,5): error TS2322: Type 'number' is not assignable to type 'undefined'.
parserRegularExpressionDivideAmbiguity6.ts(19,5): error TS2322: Type 'number' is not assignable to type 'undefined'.


==== parserRegularExpressionDivideAmbiguity6.ts (16 errors) ====
    function c255lsqr8h(a7, a6, a5, a4, a3, a2, a1, a0) {
        let r = [];
        let v;
        r[0] = (v = a0*a0) & 0xFFFF;
        ~~~~
!!! error TS2322: Type 'number' is not assignable to type 'undefined'.
        r[1] = (v = ((v / 0x10000) | 0) + 2*a0*a1) & 0xFFFF;
        ~~~~
!!! error TS2322: Type 'number' is not assignable to type 'undefined'.
        r[2] = (v = ((v / 0x10000) | 0) + 2*a0*a2 + a1*a1) & 0xFFFF;
        ~~~~
!!! error TS2322: Type 'number' is not assignable to type 'undefined'.
        r[3] = (v = ((v / 0x10000) | 0) + 2*a0*a3 + 2*a1*a2) & 0xFFFF;
        ~~~~
!!! error TS2322: Type 'number' is not assignable to type 'undefined'.
        r[4] = (v = ((v / 0x10000) | 0) + 2*a0*a4 + 2*a1*a3 + a2*a2) & 0xFFFF;
        ~~~~
!!! error TS2322: Type 'number' is not assignable to type 'undefined'.
        r[5] = (v = ((v / 0x10000) | 0) + 2*a0*a5 + 2*a1*a4 + 2*a2*a3) & 0xFFFF;
        ~~~~
!!! error TS2322: Type 'number' is not assignable to type 'undefined'.
        r[6] = (v = ((v / 0x10000) | 0) + 2*a0*a6 + 2*a1*a5 + 2*a2*a4 + a3*a3) & 0xFFFF;
        ~~~~
!!! error TS2322: Type 'number' is not assignable to type 'undefined'.
        r[7] = (v = ((v / 0x10000) | 0) + 2*a0*a7 + 2*a1*a6 + 2*a2*a5 + 2*a3*a4) & 0xFFFF;
        ~~~~
!!! error TS2322: Type 'number' is not assignable to type 'undefined'.
        r[8] = (v = ((v / 0x10000) | 0) + 2*a1*a7 + 2*a2*a6 + 2*a3*a5 + a4*a4) & 0xFFFF;
        ~~~~
!!! error TS2322: Type 'number' is not assignable to type 'undefined'.
        r[9] = (v = ((v / 0x10000) | 0) + 2*a2*a7 + 2*a3*a6 + 2*a4*a5) & 0xFFFF;
        ~~~~
!!! error TS2322: Type 'number' is not assignable to type 'undefined'.
        r[10] = (v = ((v / 0x10000) | 0) + 2*a3*a7 + 2*a4*a6 + a5*a5) & 0xFFFF;
        ~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'undefined'.
        r[11] = (v = ((v / 0x10000) | 0) + 2*a4*a7 + 2*a5*a6) & 0xFFFF;
        ~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'undefined'.
        r[12] = (v = ((v / 0x10000) | 0) + 2*a5*a7 + a6*a6) & 0xFFFF;
        ~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'undefined'.
        r[13] = (v = ((v / 0x10000) | 0) + 2*a6*a7) & 0xFFFF;
        ~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'undefined'.
        r[14] = (v = ((v / 0x10000) | 0) + a7*a7) & 0xFFFF;
        ~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'undefined'.
        r[15] = ((v / 0x10000) | 0);
        ~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'undefined'.
        return r;
    }
    